# trend-rover

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-12-plan-1-scaffold-storage.md  2026-05-12-plan-2-youtube-scraper.md  2026-05-12-plan-3-x-scraper.md  2026-05-12-plan-4-vision.md  2026-05-12-plan-5-cli.md  2026-05-12-plan-6-dashboard-skill.md
docs/superpowers/specs/: 2026-05-12-trend-rover-design.md
tests/: test_cli.py  test_config.py  test_dashboard.py  test_models.py  test_orchestrator.py  test_scraper_utils.py  test_storage.py  test_vision.py  test_x_scraper.py  test_youtube_filters.py  test_youtube_scraper.py
trend_rover/: cli.py  config.py  models.py  orchestrator.py
trend_rover/dashboard/: README.md  app.py  requirements.txt
trend_rover/scrapers/: _utils.py  _youtube_filters.py  base.py  x.py  youtube.py
trend_rover/skill/: trend-rover.md
trend_rover/storage/: db.py  export.py
trend_rover/vision/: __init__.py  base.py  llm.py  opencv.py
