[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-rover"
version = "0.1.0"
description = "Track brand keyword trends across YouTube and X"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
    "opencv-python>=4.9",
    "gradio>=4.36",
    "rich>=13.7",
    "anthropic>=0.28",
    "openai>=1.30",
]

[project.scripts]
trend-rover = "trend_rover.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
